--- a/Makefile.in
+++ b/Makefile.in
@@ -104,6 +104,7 @@ LIBS = @LIBS@
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
 MKDIR_P = @MKDIR_P@
+OPCUA_SERVER_PATH = @OPCUA_SERVER_PATH@
 PACKAGE = @PACKAGE@
 PACKAGE_BUGREPORT = @PACKAGE_BUGREPORT@
 PACKAGE_NAME = @PACKAGE_NAME@
@@ -165,6 +166,7 @@ EXTRA_DIST = \
   Makefile.in \
   setup.py
 
+opcua_paths = OPCUA_SERVER_PATH=$(OPCUA_SERVER_PATH)
 all: all-am
 
 .SUFFIXES:
@@ -485,17 +487,17 @@ uninstall-am:
 
 
 all:
-	python setup.py build
+	$(opcua_paths) python setup.py build
 
 check:
-	$(MAKE) -C tests check
+	$(opcua_paths) $(MAKE) -C tests check
 
 clean:
 	$(MAKE) -C tests clean
 	rm -rvf build dist
 
 python-dist:
-	python setup.py bdist
+	$(opcua_paths) python setup.py bdist
 
 dist:
 
@@ -503,7 +505,7 @@ distclean: clean
 	rm -vf Makefile
 
 install: python-dist
-	python setup.py install --prefix=$(prefix)
+	$(opcua_paths)python setup.py install --prefix=$(prefix)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
