--- a/tests/Makefile
+++ b/tests/Makefile
@@ -4,8 +4,11 @@ libraries_path =$(OPCUA_SERVER_PATH)/lib
 all:
 	$(opcua_paths) python setup.py bdist
 
+TEST_VARS = $(opcua_paths) LD_LIBRARY_PATH=$(libraries_path) PYTHONPATH=$(shell find . -name \*.so -exec dirname {} + )
+
 check: all
-	$(opcua_paths) LD_LIBRARY_PATH=$(libraries_path) PYTHONPATH=$(shell find . -name \*.so -exec dirname {} + ) python test.py
+	$(TEST_VARS) python test_highlevel.py
+#	$(TEST_VARS) python test.py
 	
 clean:
 	rm -rvf build dist
