--- a/tests/core/configs/test.conf
+++ b/tests/core/configs/test.conf
@@ -1,5 +1,15 @@
 <?xml version="1.0"?>
 <config>
+  <param1>value1</param1>
+  <param2>value2</param2>
+  <group1>
+    <param1>value1</param1>
+    <param2>value2</param2>
+  </group1>
+  <group2>
+    <param1>value1</param1>
+    <param2>value2</param2>
+  </group2>
   <modules>
     <module>
       <id>child_module</id>
