Fixed loading of opcuaserver. Refactored format of server configuration file.

--- a/src/server/configs/server.conf
+++ b/src/server/configs/server.conf
@@ -1,76 +1,52 @@
 <?xml version="1.0"?>
 <config>
-  <modules>
+  <endpoints_services>
+    <!-- Enable/disable debuging of module. -->
+    <debug>1</debug>
 
-    <module>
-      <id>services_registry</id>
-      <path>libservices_registry_addon.so</path>
-    </module>
+    <application>
+      <name>Test OPC UA Server</name>
+      <uri>opcua.treww.org</uri>
+      <type>server</type>
 
-    <module>
-      <id>tcp_server</id>
-      <path>libopcua_tcp_server.so</path>
-    </module>
+      <endpoint>
+        <url>opc.tcp://localhost:4841</url>
+        <security_mode>none</security_mode>
+        <security_policy_uri>http://opcfoundation.org/UA/SecurityPolicy#None</security_policy_uri>
+        <transport_profile_uri>http://opcfoundation.org/UA-Profile/Transport/uatcp-uasc-uabinary</transport_profile_uri>
 
-    <module>
-      <id>endpoints_services</id>
-      <path>libendpoints_services_addon.so</path>
-      <depends_on>
-        <id>services_registry</id>
-      </depends_on>
-    </module>
-
-    <module>
-      <id>address_space_registry</id>
-      <path>libaddress_space_addon.so</path>
-      <depends_on>
-        <id>services_registry</id>
-      </depends_on>
-    </module>
-
-    <module>
-      <id>standard_namespace</id>
-      <path>libstandard_ns_addon.so</path>
-      <depends_on>
-        <id>address_space_registry</id>
-      </depends_on>
-    </module>
-
-    <module>
-      <id>opcua_protocol</id>
-      <path>libopcua_protocol.so</path>
-      <depends_on>
-        <id>tcp_server</id>
-        <id>services_registry</id>
-        <id>endpoints_services</id>
-      </depends_on>
-      <parameters>
-        <!-- Enable/disable debuging of module. -->
-        <debug>1</debug>
-
-        <application>
-          <name>Test OPC UA Server</name>
-          <uri>opcua.treww.org</uri>
-          <type>server</type>
-
-          <endpoint>
-            <url>opc.tcp://localhost:4841</url>
-            <security_mode>none</security_mode>
-            <security_policy_uri>http://opcfoundation.org/UA/SecurityPolicy#None</security_policy_uri>
-            <transport_profile_uri>http://opcfoundation.org/UA-Profile/Transport/uatcp-uasc-uabinary</transport_profile_uri>
-
-            <user_token_policy>
-              <id>anonymous</id>
-              <type>anonymous</type>
-              <uri>http://opcfoundation.org/UA/SecurityPolicy#None</uri>
-            </user_token_policy>
+        <user_token_policy>
+          <id>anonymous</id>
+          <type>anonymous</type>
+          <uri>http://opcfoundation.org/UA/SecurityPolicy#None</uri>
+        </user_token_policy>
 
 	  </endpoint>
-        </application>
+    </application>
+  </endpoints_services>
 
-      </parameters>
-    </module>
+  <opcua_protocol>
+    <!-- Enable/disable debuging of module. -->
+    <debug>1</debug>
 
-  </modules>
+    <application>
+      <name>Test OPC UA Server</name>
+      <uri>opcua.treww.org</uri>
+      <type>server</type>
+
+      <endpoint>
+        <url>opc.tcp://localhost:4841</url>
+        <security_mode>none</security_mode>
+        <security_policy_uri>http://opcfoundation.org/UA/SecurityPolicy#None</security_policy_uri>
+        <transport_profile_uri>http://opcfoundation.org/UA-Profile/Transport/uatcp-uasc-uabinary</transport_profile_uri>
+
+        <user_token_policy>
+          <id>anonymous</id>
+          <type>anonymous</type>
+          <uri>http://opcfoundation.org/UA/SecurityPolicy#None</uri>
+        </user_token_policy>
+
+	  </endpoint>
+    </application>
+  </opcua_protocol>
 </config>
-
