Restored work of installed binary server. There is new configuration file format with static and dynamic addons.

--- a/src/server/configs/server.conf
+++ b/src/server/configs/server.conf
@@ -1,5 +1,10 @@
 <?xml version="1.0"?>
 <config>
+
+  <address_space_registry>
+  	<debug>1</debug>  
+  </address_space_registry>  
+
   <endpoints_services>
     <!-- Enable/disable debuging of module. -->
     <debug>1</debug>
